--- a/index2.html
+++ b/index2.html
@@ -18,25 +18,63 @@
       <div class="div1">
         <div class="txt">Tekstas</div>
       </div>
-      <div class="div2"><div class="txt">Tekstas</div></div>
-      <div class="div3"><div class="txt">Tekstas</div></div>
-      <div class="div4"><div class="txt">Tekstas</div></div>
-      <div class="div5"><div class="txt">Tekstas</div></div>
-      <div class="div6"><div class="txt">Tekstas</div></div>
-      <div class="div7"><div class="txt">Tekstas</div></div>
-      <div class="div8"><div class="txt">Tekstas</div></div>
-      <div class="div9"><div class="txt">Tekstas</div></div>
-      <div class="div10"><div class="txt">Tekstas</div></div>
-      <div class="div11"><div class="txt">Tekstas</div></div>
-      <div class="div12"><div class="txt">Tekstas</div></div>
-      <div class="div13"><div class="txt">Tekstas</div></div>
-      <div class="div14"><div class="txt">Tekstas</div></div>
-      <div class="div15"><div class="txt">Tekstas</div></div>
-      <div class="div16"><div class="txt">Tekstas</div></div>
-      <div class="div17"><div class="txt">Tekstas</div></div>
-      <div class="div18"><div class="txt">Tekstas</div></div>
-      <div class="div19"><div class="txt">Tekstas</div></div>
-      <div class="div20"><div class="txt">Tekstas</div></div>
+      <div class="div2">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div3">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div4">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div5">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div6">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div7">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div8">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div9">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div10">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div11">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div12">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div13">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div14">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div15">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div16">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div17">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div18">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div19">
+        <div class="txt">Tekstas</div>
+      </div>
+      <div class="div20">
+        <div class="txt">Tekstas</div>
+      </div>
     </div>
   </body>
 </html>
